data/all_generated_tests/raw_wast_tests/br_table_IncorrectHandlingofControlFlowAcrossModuleBoundaries_2560.wast
;; **Test 9: Import function with misplaced operand types for br_table** - Module A exports a function where br_table targets have incorrectly placed operand types. - Module B incorporates this function leading to differential in stack state. - Testing if `wizard_engine` correctly identifies and stops versus WebAssembly’s execution.

(assert_invalid
 (module
  (func $misplaced-operands
   (block $l0 (result i32 i32)
    (block $l1
     (block $l2
      (br_table $l0 $l1 (i64.const 1) (i32.const 2))
     )
     (drop)
    )
   )
  )
 )
 "type mismatch"
)